# RTFIR

./: .gitmodules  CMakeLists.txt  README.md  START.bat  build.bat  build.sh  build.txt  clock.c  conf.c  console.c  convolve.c  core.c  frontend.c  main.c  main.rc  mem.c  portaudio.dll.import.c  print.c  threads.c
.github/workflows/: cmake-windows-2.yml  cmake-windows.yml
filters/: 0-1.rephase  0-1.txt  1-4.rephase  1-4.txt  4-8.rephase  4-8.txt  44100_1sec_Highs.txt  48000_1sec_Lows.txt  8-20.rephase  8-20.txt  8-24.txt  96000_1sec_Lows.txt
filters/44100/: 1sec_Echo.txt  1sec_Lows.txt  1sec_Mids.txt  1sec_MoreMids.txt  1sec_None.txt
filters/48000/: 1sec_Highs.txt
filters/96000/: 1sec_Highs.txt
lib/: .gitmodules
src/: CMakeLists.txt  main.c  os.c  os.h
